fix footer link spacing

--- a/style.css
+++ b/style.css
@@ -570,12 +570,12 @@ footer .widget ul li {
   list-style: none;
 }
 
-footer .widget a {
+footer .widget ul li {
   display: block;
   margin-bottom: 20px;
 }
 
-.menu ul li a:last-child {
+footer .widget ul li:last-child {
   margin-bottom: 0;
 }
 
